[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Safe Network EVM"
edition = "2024"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "evmlib"
repository = "https://github.com/WithAutonomi/evmlib"
version = "0.7.0"

[features]
external-signer = []

[dependencies]
alloy = { version = "1.0.32", default-features = false, features = ["contract", "json-rpc", "network", "node-bindings", "provider-http", "reqwest-rustls-tls", "rpc-client", "rpc-types", "signer-local", "std"] }
serde = "1"
serde_with = { version = "3.11.0", features = ["macros"] }
thiserror = "1.0"
tracing = { version = "~0.1.26" }
tokio = "1.43.1"
rand = "0.8.5"
exponential-backoff = "2.0.0"
hex = "~0.4.3"
xor_name = "5"
rmp-serde = "1"
tiny-keccak = { version = "~2.0.2", features = ["sha3"] }
ant-merkle = "1.5.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs-next = "~2.0"
serde_json = "1.0.108"
